--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.0.0"
+  },
+  "engines": {
+    "node": "14.16.0"
   }
 }
